Modified List Comprehension.ipynb

--- a/List Comprehension.ipynb
+++ b/List Comprehension.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Appending using simple Loop"
+    "## Appending using simple Loop"
    ]
   },
   {
@@ -29,20 +29,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "Appending using List Comprehension "
+    "## Appending using List Comprehension "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -137,6 +137,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## List comprehension with conditions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -168,7 +175,7 @@
     }
    ],
    "source": [
-    "print([i ** 2 if i % 2 == 0 for i in range(10)])"
+    "print([i ** 2 if i % 2 == 0 for i in range(10)])      # <-- Note"
    ]
   },
   {
